Print loaded program to screen

--- a/befunge-interpreter.vcxproj
+++ b/befunge-interpreter.vcxproj
@@ -122,6 +122,10 @@
     <ClInclude Include="src\helpers.h" />
     <ClInclude Include="src\Program.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="examples\hello_world.bf" />
+    <None Include="examples\sieve_of_eratosthenes.bf" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
