--- a/befunge-interpreter.vcxproj.filters
+++ b/befunge-interpreter.vcxproj.filters
@@ -38,4 +38,9 @@
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="examples\credit.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
